--- a/package.json
+++ b/package.json
@@ -4,17 +4,29 @@
   "description": "API Solo Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit && npm run lint",
+    "lint": "eslint --fix --ext .js .",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "knex": "^3.1.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "chai": "^5.0.3",
     "chai-http": "^4.4.0",
-    "mocha": "^10.2.0"
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-problems": "^8.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "mocha": "^10.2.0",
+    "prettier": "^3.2.5",
+    "pretty-quick": "^4.0.0"
   }
 }
