--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "API Solo Project",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js",
     "test": "mocha --exit && npm run lint",
     "lint": "eslint --fix --ext .js .",
     "migrate": "knex migrate:latest",
@@ -19,13 +21,14 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
-    "chai": "^5.0.3",
+    "chai": "^4.2.0",
     "chai-http": "^4.4.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-problems": "^8.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "mocha": "^10.2.0",
+    "nodemon": "^3.0.3",
     "prettier": "^3.2.5",
     "pretty-quick": "^4.0.0"
   }
